package internal;

message WriteShardRequest {
    required uint64 ShardID = 1;
    repeated Message Messages = 2;
}

message From {
    required string UserID = 1;
    required string Name = 2;
}

message Content {
    required string PlainText = 1;
    optional string HTML = 2;
}

message Mention {
    required string RecipientID = 1;
    required string RecipientUsername = 2;
}

message Field {
    required string Name = 1;
    oneof Value {
        int32 Int32 = 2;
        int64 Int64 = 3;
        double Float64 = 4;
        bool Bool = 5;
        string String = 6;
        bytes Bytes = 7;
    }
}

message Tag {
    required string Key = 1;
    required string Value = 2;
}


message Message {
	optional string Id = 1;
    required int64 Time = 2;
    repeated Field Fields = 3;
    repeated Tag Tags = 4;
    optional From From = 5;
    optional Content Content = 6;
    optional Mention Mentions = 7;
}

message WriteShardResponse {
    required int32 Code = 1;
    optional string Message = 2;
}

message MapShardRequest {
    required uint64 ShardID = 1;
    required string Query = 2;
    required int32 ChunkSize = 3;
}

message MapShardResponse {
    required int32 Code = 1;
    optional string Message = 2;
    optional bytes Data = 3;
    repeated string TagSets = 4;
}
